# moderne-cluster-build-logs

./: .gitignore  Dockerfile  LOCAL_INSTALL.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
Clustering/: README.md  requirements.txt
Clustering/scripts/: 00.download_ingest_samples.py  01.load_logs.py  01.load_logs_and_extract.py  02.embed_summaries_and_cluster.py  02.extract_stacktrace.py  02.generate_summaries_from_logs.py  03.embed_summaries_and_cluster.py  04.cluster_summaries_results.py  llamacpp.sh
ClusteringWithDocker/: Dockerfile  README.md  requirements.txt
ClusteringWithDocker/scripts/: 01.load_logs.py  01.load_logs_and_extract.py  02.embed_summaries_and_cluster.py  02.generate_summaries_from_logs.py  03.embed_summaries_and_cluster.py  04.cluster_summaries_results.py
scripts/: 00.download_ingest_samples.py  01.extract_failures.py  01.load_logs_and_extract.py  02.embed_summaries_and_cluster.py  02.load_logs_and_extract.py  03.embed_summaries_and_cluster.py  analyze_logs.py  build_log_analyzer.py  download_model.py  entry-point.sh  log_downloader.py  utils.py
templates/: scatter_plot.html  tooltip_script.html
